tests/compile_fail/export_dot_non_pipeline_misuse.cpp
#include <pb/pipeline.hpp>

struct NotAPipeline {};

int main() {
  (void)pb::to_dot<NotAPipeline>("bad");
  return 0;
}
